--- a/foodme/.editorconfig
+++ b/foodme/.editorconfig
@@ -1,20 +1,21 @@
-# EditorConfig helps developers define and maintain consistent
-# coding styles between different editors and IDEs
-# editorconfig.org
+# EditorConfig is awesome: http://EditorConfig.org
 
+# top-most EditorConfig file
 root = true
 
-
 [*]
-end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
 indent_style = space
 indent_size = 2
+end_of_line = lf
+trim_trailing_whitespace = true
+insert_final_newline = true
 
-[*.hbs]
-insert_final_newline = false
+# Matches multiple files with brace expansion notation
+[*.{js,hbs,css,sass}]
+charset = utf-8
+indent_style = tab
+indent_size = tab
+tab_width = 4
 
-[*.{diff,md}]
+[*.md]
 trim_trailing_whitespace = false
